syntax = "proto3";

package contacts;

service Contacts {
  rpc CreateContact(Contact) returns (Contact);
  rpc ReadContact(ReadRequest) returns (Contact);
  rpc UpdateContact(UpdateRequest) returns (Contact);
  rpc DeleteContact(DeleteRequest) returns (Empty);
}

message Contact {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
}

message ReadRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
}

message DeleteRequest {
  string id = 1;
}

message Empty {}
